[erro]pg - 191 - Upload com paperclip

--- a/cp2-caelum-apostila/vota_prato/Gemfile
+++ b/cp2-caelum-apostila/vota_prato/Gemfile
@@ -26,6 +26,9 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 #Listagem de Restaurantes. Pg 189 da apostila.
 gem 'kaminari'
 
+#Para uploads de imagens
+gem 'paperclip'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
