pg 199 - Rspec instalado

--- a/cp2-caelum-apostila/vota_prato/test/fixtures/restaurantes.yml
+++ b/cp2-caelum-apostila/vota_prato/test/fixtures/restaurantes.yml
@@ -9,3 +9,12 @@ one: {}
 #
 two: {}
 #  column: value
+
+fasano:
+  nome: Fasano
+  endereco: Rua Vergueiro
+
+fogo_de_chao:
+  nome: Fogo de Chao 
+  endereco: Avenida dos Bandeirantes
+
