--- a/cp2-caelum-apostila/vota_prato/Gemfile
+++ b/cp2-caelum-apostila/vota_prato/Gemfile
@@ -41,6 +41,7 @@ gem 'paperclip'
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
+  gem 'rspec-rails', '~> 3.5'
 end
 
 group :development do
