Criando o model franquia e seus relacionamentos

--- a/cp2-caelum-apostila/vota_prato/Gemfile
+++ b/cp2-caelum-apostila/vota_prato/Gemfile
@@ -29,6 +29,9 @@ gem 'kaminari'
 #Para uploads de imagens
 gem 'paperclip'
 
+#Substituindo o Observer. Pg. 217 - Desafio: Design Pattern Observer.
+gem 'wisper', '2.0.0.rc1'
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
